--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@headlessui/react": "^1.7.7",
     "@heroicons/react": "^2.0.13",
+    "@tanstack/react-query": "^4.23.0",
+    "axios": "^1.2.4",
     "daisyui": "^2.47.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
