finished the registration form

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "daisyui": "^2.47.0",
     "flowbite": "^1.6.3",
     "flowbite-react": "^0.3.8",
+    "headlessui": "^0.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.7.0",
